@@ -22,6 +22,7 @@ FEATURES:
 	+ Slideshow and fullscreen modes
 	+ Rotating, zooming, flipping, resizing, cropping
 	+ Saving, deleting, renaming
+	+ Screenshot support
 	+ Custom actions
 	+ Command-line access
 	+ Configurable interface
