@@ -55,7 +55,8 @@ setup(name='Mirage',
 			'Topic :: Multimedia :: Graphics :: Viewers'
 			],
 		py_modules = ['mirage'],
-		ext_modules = [Extension('imgfuncs', ['imgfuncs.c'])],
+		ext_modules = [Extension(name='imgfuncs', sources=['imgfuncs.c']), 
+		               Extension(name='xmouse', sources=['xmouse.c'], libraries=['X11'])],
 		scripts = ['mirage'],
 		data_files=[('share/mirage', ['README', 'COPYING', 'CHANGELOG', 'TODO', 'TRANSLATORS', 'stock_shuffle.png', 'stock_leave-fullscreen.png', 'stock_fullscreen.png', 'mirage_blank.png']),
 			('share/applications', ['mirage.desktop']),
