@@ -1,4 +1,5 @@
 v0.9.1 - Pending
+	+ Screenshot support
 	+ Bug: Fix .desktop file category
 	+ Bug: Ctrl+mousewheel doesn't zoom when caps/num lock is on
 	+ Bug: Fix horizontal centering of image
